--- a/html/database/1-sqlserver.html
+++ b/html/database/1-sqlserver.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-12 -->
+<!-- 2022-12-15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>SqlServer</title>
@@ -22,15 +22,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org25b7ad0">1. 版本</a></li>
-<li><a href="#orgc33de15">2. LocalDB</a></li>
+<li><a href="#org6fcb62a">1. 版本</a></li>
+<li><a href="#org307e09e">2. LocalDB</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-org25b7ad0" class="outline-2">
-<h2 id="org25b7ad0"><span class="section-number-2">1.</span> 版本</h2>
+<section id="outline-container-org6fcb62a" class="outline-2">
+<h2 id="org6fcb62a"><span class="section-number-2">1.</span> 版本</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>SQLServer</li>
@@ -40,15 +40,15 @@
 </div>
 </section>
 
-<section id="outline-container-orgc33de15" class="outline-2">
-<h2 id="orgc33de15"><span class="section-number-2">2.</span> LocalDB</h2>
+<section id="outline-container-org307e09e" class="outline-2">
+<h2 id="org307e09e"><span class="section-number-2">2.</span> LocalDB</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 可以使用 <code>sqllocaldb</code> 命令对 LocalDB 进行管理:
 </p>
 <div class="org-src-container">
-<pre class="src src-shell">sqllocaldb info                 <span style="color: #505050;"># </span><span style="color: #505050;">&#26174;&#31034;&#25152;&#26377;&#30340; LocalDB &#23454;&#20363;</span>
-sqllocaldb create MyLocalDbName <span style="color: #505050;"># </span><span style="color: #505050;">&#21019;&#24314;&#26032;&#30340;&#23454;&#20363;</span>
+<pre class="src src-shell">sqllocaldb info                 <span style="color: #b22222;"># </span><span style="color: #b22222;">&#26174;&#31034;&#25152;&#26377;&#30340; LocalDB &#23454;&#20363;</span>
+sqllocaldb create MyLocalDbName <span style="color: #b22222;"># </span><span style="color: #b22222;">&#21019;&#24314;&#26032;&#30340;&#23454;&#20363;</span>
 </pre>
 </div>
 
@@ -60,10 +60,10 @@ sqllocaldb create MyLocalDbName <span style="color: #505050;"># </span><span sty
 连接字符串示例:
 </p>
 <div class="org-src-container">
-<pre class="src src-xml"><span style="color: #505050;">&lt;!-- </span><span style="color: #505050;">Web.config</span><span style="color: #505050;"> --&gt;</span>
-&lt;<span style="color: #721045;">add</span> <span style="color: #00538b;">name</span>=<span style="color: #2544bb;">"MovieDBContext"</span>
-   <span style="color: #00538b;">connectionString</span>=<span style="color: #2544bb;">"Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-MvcMovie;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Movies.mdf"</span>
-   <span style="color: #00538b;">providerName</span>=<span style="color: #2544bb;">"System.Data.SqlClient"</span> /&gt;
+<pre class="src src-xml"><span style="color: #b22222;">&lt;!-- </span><span style="color: #b22222;">Web.config</span><span style="color: #b22222;"> --&gt;</span>
+&lt;<span style="color: #0000ff;">add</span> <span style="color: #a0522d;">name</span>=<span style="color: #8b2252;">"MovieDBContext"</span>
+   <span style="color: #a0522d;">connectionString</span>=<span style="color: #8b2252;">"Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-MvcMovie;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Movies.mdf"</span>
+   <span style="color: #a0522d;">providerName</span>=<span style="color: #8b2252;">"System.Data.SqlClient"</span> /&gt;
 </pre>
 </div>
 </div>
@@ -71,7 +71,7 @@ sqllocaldb create MyLocalDbName <span style="color: #505050;"># </span><span sty
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-12</p>
+<p class="date">Created: 2022-12-15</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
