--- a/html/dotnet/7-ef.html
+++ b/html/dotnet/7-ef.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-13 -->
+<!-- 2022-12-15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Entity Framework</title>
@@ -22,25 +22,25 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga4d1761">1. Code First</a></li>
+<li><a href="#org7e4db5d">1. Code First</a></li>
 </ul>
 </div>
 </nav>
 
 
 
-<section id="outline-container-orga4d1761" class="outline-2">
-<h2 id="orga4d1761"><span class="section-number-2">1.</span> Code First</h2>
+<section id="outline-container-org7e4db5d" class="outline-2">
+<h2 id="org7e4db5d"><span class="section-number-2">1.</span> Code First</h2>
 <div class="outline-text-2" id="text-1">
 <div class="org-src-container">
-<pre class="src src-powershell"><span style="color: #505050;"># </span><span style="color: #505050;">&#29983;&#25104; Configuration.cs &#25991;&#20214;&#65292;&#21487;&#20197;&#22312;&#37324;&#38754;&#35774;&#32622;&#31181;&#23376;&#25968;&#25454; (Seed)</span>
-<span style="color: #721045;">Enable-Migrations</span> <span style="color: #0000c0;">-ContextTypeName</span> MvcMovie.Models.MovieDBContext
+<pre class="src src-powershell"><span style="color: #b22222;"># </span><span style="color: #b22222;">&#29983;&#25104; Configuration.cs &#25991;&#20214;&#65292;&#21487;&#20197;&#22312;&#37324;&#38754;&#35774;&#32622;&#31181;&#23376;&#25968;&#25454; (Seed)</span>
+<span style="color: #0000ff;">Enable-Migrations</span> <span style="color: #008b8b;">-ContextTypeName</span> MvcMovie.Models.MovieDBContext
 
-<span style="color: #505050;"># </span><span style="color: #505050;">&#29983;&#25104;&#25351;&#23450;&#21517;&#23383;&#30340;&#36801;&#31227;&#25991;&#20214;&#65292;&#37324;&#38754;&#26377;&#25968;&#25454;&#24211;&#21464;&#21160;&#30340;&#36923;&#36753; (Up/Down)</span>
-<span style="color: #721045;">Add-Migration</span> <span style="color: #721045;">Initial-mingzi</span>
+<span style="color: #b22222;"># </span><span style="color: #b22222;">&#29983;&#25104;&#25351;&#23450;&#21517;&#23383;&#30340;&#36801;&#31227;&#25991;&#20214;&#65292;&#37324;&#38754;&#26377;&#25968;&#25454;&#24211;&#21464;&#21160;&#30340;&#36923;&#36753; (Up/Down)</span>
+<span style="color: #0000ff;">Add-Migration</span> <span style="color: #0000ff;">Initial-mingzi</span>
 
-<span style="color: #505050;"># </span><span style="color: #505050;">&#24212;&#29992;&#36801;&#31227;&#25991;&#20214;</span>
-<span style="color: #721045;">Update-Database</span>
+<span style="color: #b22222;"># </span><span style="color: #b22222;">&#24212;&#29992;&#36801;&#31227;&#25991;&#20214;</span>
+<span style="color: #0000ff;">Update-Database</span>
 </pre>
 </div>
 </div>
@@ -48,7 +48,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-13</p>
+<p class="date">Created: 2022-12-15</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
