--- a/html/frontend/1-html+css.html
+++ b/html/frontend/1-html+css.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-11-21 -->
+<!-- 2022-12-15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>HTML/CSS</title>
@@ -22,30 +22,30 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org58f8a97">1. html</a></li>
-<li><a href="#orgaa12a5b">2. CSS</a>
+<li><a href="#org6c2bcb1">1. html</a></li>
+<li><a href="#org2091712">2. CSS</a>
 <ul>
-<li><a href="#org3dcdd4b">2.1. 网页布局 (Layout)</a>
+<li><a href="#orgafb8126">2.1. 网页布局 (Layout)</a>
 <ul>
-<li><a href="#orga644afc">2.1.1. Display/Position (盒子模型/文档流)</a></li>
-<li><a href="#org4010622">2.1.2. Float, 浮动</a></li>
-<li><a href="#org76d24ce">2.1.3. Flexbox, 弹性盒子</a></li>
-<li><a href="#org4377907">2.1.4. Grid, 网格布局</a></li>
+<li><a href="#orga185a26">2.1.1. Display/Position (盒子模型/文档流)</a></li>
+<li><a href="#orgf246877">2.1.2. Float, 浮动</a></li>
+<li><a href="#orgec25639">2.1.3. Flexbox, 弹性盒子</a></li>
+<li><a href="#org87136e6">2.1.4. Grid, 网格布局</a></li>
 </ul>
 </li>
-<li><a href="#org2626c7d">2.2. Viewport</a></li>
-<li><a href="#orga43251f">2.3. Media Query</a></li>
-<li><a href="#org4818a78">2.4. CDN (Content Delivery Network)</a></li>
+<li><a href="#org265a71d">2.2. Viewport</a></li>
+<li><a href="#org7446f16">2.3. Media Query</a></li>
+<li><a href="#org1569675">2.4. CDN (Content Delivery Network)</a></li>
 </ul>
 </li>
-<li><a href="#org68801f2">3. bootstrap.css</a></li>
+<li><a href="#org41eb0fc">3. bootstrap.css</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-org58f8a97" class="outline-2">
-<h2 id="org58f8a97"><span class="section-number-2">1.</span> html</h2>
+<section id="outline-container-org6c2bcb1" class="outline-2">
+<h2 id="org6c2bcb1"><span class="section-number-2">1.</span> html</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 skip
@@ -53,16 +53,16 @@ skip
 </div>
 </section>
 
-<section id="outline-container-orgaa12a5b" class="outline-2">
-<h2 id="orgaa12a5b"><span class="section-number-2">2.</span> CSS</h2>
+<section id="outline-container-org2091712" class="outline-2">
+<h2 id="org2091712"><span class="section-number-2">2.</span> CSS</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org3dcdd4b" class="outline-3">
-<h3 id="org3dcdd4b"><span class="section-number-3">2.1.</span> 网页布局 (Layout)</h3>
+<div id="outline-container-orgafb8126" class="outline-3">
+<h3 id="orgafb8126"><span class="section-number-3">2.1.</span> 网页布局 (Layout)</h3>
 <div class="outline-text-3" id="text-2-1">
 </div>
-<div id="outline-container-orga644afc" class="outline-4">
-<h4 id="orga644afc"><span class="section-number-4">2.1.1.</span> Display/Position (盒子模型/文档流)</h4>
+<div id="outline-container-orga185a26" class="outline-4">
+<h4 id="orga185a26"><span class="section-number-4">2.1.1.</span> Display/Position (盒子模型/文档流)</h4>
 <div class="outline-text-4" id="text-2-1-1">
 <p>
 每一个元素可以通过 display 设置其在盒子模型中的默认渲染行为:
@@ -84,59 +84,59 @@ skip
 </div>
 </div>
 
-<div id="outline-container-org4010622" class="outline-4">
-<h4 id="org4010622"><span class="section-number-4">2.1.2.</span> Float, 浮动</h4>
+<div id="outline-container-orgf246877" class="outline-4">
+<h4 id="orgf246877"><span class="section-number-4">2.1.2.</span> Float, 浮动</h4>
 <div class="outline-text-4" id="text-2-1-2">
 <p>
 一种将元素脱离正常的文档流，单独为其设置位置的方式。
 </p>
 
 <div class="org-src-container">
-<pre class="src src-css"><span style="color: #5317ac;">div </span><span style="color: #000000;">{</span> <span style="color: #005a5f;">float</span>: right; <span style="color: #000000;">}</span>
+<pre class="src src-css"><span style="color: #0000ff;">div</span> <span style="color: #707183;">{</span> <span style="color: #a020f0;">float</span>: right; <span style="color: #707183;">}</span>
 </pre>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org76d24ce" class="outline-4">
-<h4 id="org76d24ce"><span class="section-number-4">2.1.3.</span> Flexbox, 弹性盒子</h4>
+<div id="outline-container-orgec25639" class="outline-4">
+<h4 id="orgec25639"><span class="section-number-4">2.1.3.</span> Flexbox, 弹性盒子</h4>
 <div class="outline-text-4" id="text-2-1-3">
 <div class="org-src-container">
-<pre class="src src-css"><span style="color: #5317ac;">.container</span>
-<span style="color: #000000;">{</span>
-    <span style="color: #005a5f;">display</span>: flex;
-    <span style="color: #005a5f;">justify-content</span>: center;
-<span style="color: #000000;">}</span>
-<span style="color: #5317ac;">.item</span>
-<span style="color: #000000;">{</span>
-    <span style="color: #005a5f;">flex-flow</span>: 1;
-<span style="color: #000000;">}</span>
+<pre class="src src-css"><span style="color: #0000ff;">.container</span>
+<span style="color: #707183;">{</span>
+    <span style="color: #a020f0;">display</span>: flex;
+    <span style="color: #a020f0;">justify-content</span>: center;
+<span style="color: #707183;">}</span>
+<span style="color: #0000ff;">.item</span>
+<span style="color: #707183;">{</span>
+    <span style="color: #a020f0;">flex-flow</span>: 1;
+<span style="color: #707183;">}</span>
 </pre>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org4377907" class="outline-4">
-<h4 id="org4377907"><span class="section-number-4">2.1.4.</span> Grid, 网格布局</h4>
+<div id="outline-container-org87136e6" class="outline-4">
+<h4 id="org87136e6"><span class="section-number-4">2.1.4.</span> Grid, 网格布局</h4>
 <div class="outline-text-4" id="text-2-1-4">
 <div class="org-src-container">
-<pre class="src src-css"><span style="color: #5317ac;">.container</span>
-<span style="color: #000000;">{</span>
-    <span style="color: #005a5f;">display</span>: grid;
-    <span style="color: #005a5f;">grid-template-columns</span>: 1fr 2fr auto;
-    <span style="color: #005a5f;">grid-gap</span>: 1em;
-<span style="color: #000000;">}</span>
-<span style="color: #5317ac;">.itemX</span>
-<span style="color: #000000;">{</span>
-    <span style="color: #005a5f;">grid-row</span>: 1 / 5;
-<span style="color: #000000;">}</span>
+<pre class="src src-css"><span style="color: #0000ff;">.container</span>
+<span style="color: #707183;">{</span>
+    <span style="color: #a020f0;">display</span>: grid;
+    <span style="color: #a020f0;">grid-template-columns</span>: 1fr 2fr auto;
+    <span style="color: #a020f0;">grid-gap</span>: 1em;
+<span style="color: #707183;">}</span>
+<span style="color: #0000ff;">.itemX</span>
+<span style="color: #707183;">{</span>
+    <span style="color: #a020f0;">grid-row</span>: 1 / 5;
+<span style="color: #707183;">}</span>
 </pre>
 </div>
 </div>
 </div>
 </div>
-<div id="outline-container-org2626c7d" class="outline-3">
-<h3 id="org2626c7d"><span class="section-number-3">2.2.</span> Viewport</h3>
+<div id="outline-container-org265a71d" class="outline-3">
+<h3 id="org265a71d"><span class="section-number-3">2.2.</span> Viewport</h3>
 <div class="outline-text-3" id="text-2-2">
 <p>
 对于这样的 CSS 样式:
@@ -176,15 +176,15 @@ body { width: 1024px }
 代码:
 </p>
 <div class="org-src-container">
-<pre class="src src-html"><span style="color: #000000;">&lt;</span><span style="color: #721045;">meta</span> <span style="color: #00538b;">name</span>=<span style="color: #2544bb;">"viewport"</span> <span style="color: #00538b;">content</span>=<span style="color: #2544bb;">"width=2000px, initial-scale=1, user-scalable=no"</span><span style="color: #000000;">&gt;</span>
-<span style="color: #000000;">&lt;</span><span style="color: #721045;">meta</span> <span style="color: #00538b;">name</span>=<span style="color: #2544bb;">"viewport"</span> <span style="color: #00538b;">content</span>=<span style="color: #2544bb;">"width=device-width"</span><span style="color: #000000;">&gt;</span>
+<pre class="src src-html"><span style="color: #707183;">&lt;</span><span style="color: #0000ff;">meta</span> <span style="color: #a0522d;">name</span>=<span style="color: #8b2252;">"viewport"</span> <span style="color: #a0522d;">content</span>=<span style="color: #8b2252;">"width=2000px, initial-scale=1, user-scalable=no"</span><span style="color: #707183;">&gt;</span>
+<span style="color: #707183;">&lt;</span><span style="color: #0000ff;">meta</span> <span style="color: #a0522d;">name</span>=<span style="color: #8b2252;">"viewport"</span> <span style="color: #a0522d;">content</span>=<span style="color: #8b2252;">"width=device-width"</span><span style="color: #707183;">&gt;</span>
 </pre>
 </div>
 </div>
 </div>
 
-<div id="outline-container-orga43251f" class="outline-3">
-<h3 id="orga43251f"><span class="section-number-3">2.3.</span> Media Query</h3>
+<div id="outline-container-org7446f16" class="outline-3">
+<h3 id="org7446f16"><span class="section-number-3">2.3.</span> Media Query</h3>
 <div class="outline-text-3" id="text-2-3">
 <p>
 为了在不同设备上渲染不同的样式，CSS 推出了 Media Query 的概念。
@@ -202,45 +202,45 @@ body { width: 1024px }
 示例:
 </p>
 <div class="org-src-container">
-<pre class="src src-css"><span style="color: #5317ac;">div</span>
-<span style="color: #000000;">{</span>
-    <span style="color: #005a5f;">color</span>: <span style="color: #ffffff; background-color: #ff0000;">red</span>;
-<span style="color: #000000;">}</span>
+<pre class="src src-css"><span style="color: #0000ff;">div</span>
+<span style="color: #707183;">{</span>
+    <span style="color: #a020f0;">color</span>: <span style="color: #ffffff; background-color: #ff0000;">red</span>;
+<span style="color: #707183;">}</span>
 
-<span style="color: #8f0075;">@media</span> screen and <span style="color: #000000;">(</span>max-device-with: 960px<span style="color: #000000;">)</span>
-<span style="color: #000000;">{</span>
-    <span style="color: #5317ac;">div</span>
-<span style="color: #5317ac;">    </span><span style="color: #a8007f;">{</span>
-        <span style="color: #005a5f;">color</span>: <span style="color: #ffffff; background-color: #008000;">green</span>;
-    <span style="color: #a8007f;">}</span>
-<span style="color: #000000;">}</span>
+<span style="color: #483d8b;">@media</span> screen and <span style="color: #707183;">(</span>max-device-with: 960px<span style="color: #707183;">)</span>
+<span style="color: #707183;">{</span>
+    <span style="color: #0000ff;">div</span>
+    <span style="color: #7388d6;">{</span>
+        <span style="color: #a020f0;">color</span>: <span style="color: #ffffff; background-color: #008000;">green</span>;
+    <span style="color: #7388d6;">}</span>
+<span style="color: #707183;">}</span>
 
-<span style="color: #8f0075;">@media</span> <span style="color: #000000;">(</span>min-width: 2000px<span style="color: #000000;">)</span>
-<span style="color: #000000;">{</span>
-    <span style="color: #5317ac;">div</span>
-<span style="color: #5317ac;">    </span><span style="color: #a8007f;">{</span>
-        <span style="color: #005a5f;">color</span>: <span style="color: #000000; background-color: #ffff00;">yellow</span>;
-    <span style="color: #a8007f;">}</span>
-<span style="color: #000000;">}</span>
+<span style="color: #483d8b;">@media</span> <span style="color: #707183;">(</span>min-width: 2000px<span style="color: #707183;">)</span>
+<span style="color: #707183;">{</span>
+    <span style="color: #0000ff;">div</span>
+    <span style="color: #7388d6;">{</span>
+        <span style="color: #a020f0;">color</span>: <span style="color: #000000; background-color: #ffff00;">yellow</span>;
+    <span style="color: #7388d6;">}</span>
+<span style="color: #707183;">}</span>
 
-<span style="color: #8f0075;">@media</span> print <span style="color: #000000;">{</span>
-    <span style="color: #5317ac;">div</span>
-<span style="color: #5317ac;">    </span><span style="color: #a8007f;">{</span>
-        <span style="color: #005a5f;">color</span>: <span style="color: #ffffff; background-color: #800080;">purple</span>;
-    <span style="color: #a8007f;">}</span>
-<span style="color: #000000;">}</span>
+<span style="color: #483d8b;">@media</span> print <span style="color: #707183;">{</span>
+    <span style="color: #0000ff;">div</span>
+    <span style="color: #7388d6;">{</span>
+        <span style="color: #a020f0;">color</span>: <span style="color: #ffffff; background-color: #800080;">purple</span>;
+    <span style="color: #7388d6;">}</span>
+<span style="color: #707183;">}</span>
 </pre>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org4818a78" class="outline-3">
-<h3 id="org4818a78"><span class="section-number-3">2.4.</span> CDN (Content Delivery Network)</h3>
+<div id="outline-container-org1569675" class="outline-3">
+<h3 id="org1569675"><span class="section-number-3">2.4.</span> CDN (Content Delivery Network)</h3>
 </div>
 </section>
 
-<section id="outline-container-org68801f2" class="outline-2">
-<h2 id="org68801f2"><span class="section-number-2">3.</span> bootstrap.css</h2>
+<section id="outline-container-org41eb0fc" class="outline-2">
+<h2 id="org41eb0fc"><span class="section-number-2">3.</span> bootstrap.css</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 <a href="https://www.bootcss.com/">https://www.bootcss.com/</a>
@@ -263,7 +263,7 @@ body { width: 1024px }
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-11-21</p>
+<p class="date">Created: 2022-12-15</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
