--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-12-17 -->
+<!-- 2022-12-18 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -146,13 +146,23 @@
 <li>黄必旺</li>
 </ul></li>
 </ol>
+
+<p>
+网课分组
+</p>
+<ul class="org-ul">
+<li>[韩先午] 薛有彬 梁恩宁 吴标 郭松鹏 刘少钦 黄必旺 李远源</li>
+<li>[陈智源] 陈展群 张豪 黎文鑫 高雁 唐海 钟宇杨 黎绍伟</li>
+<li>[覃秋菊] 陈永旺 李天娇 彭邦栋 杨正进 郑钧洹 唐迪 蔡正旺</li>
+<li>[李学文] 欧阳华健 欧阳轩 周晓乐 黄远坤 卢传君 秦汉 李晓辉</li>
+</ul>
 </aside>
 
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-12-17</p>
+<p class="date">Created: 2022-12-18</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
